--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,15 @@
 		"php": ">=5.4",
 		"zendframework/zend-ldap": "^2.4"
 	},
+    "require-dev": {
+		"phpunit/phpunit": "4.8.*"
+    },
 	"suggest": {
 		"zendframework/zend-ldap": "Required for the additional LDAP features."
 	},
 	"autoload": {
 		"psr-4": {
-			"Diskerror\\Utilities\\": "/"
+			"Diskerror\\Utilities\\": "src/"
 		}
 	}
 }
