--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"zendframework/zend-ldap": "^2.4"
 	},
     "require-dev": {
-		"phpunit/phpunit": "4.8.*"
+		"phpunit/phpunit": "4.8.*",
+		"phpdocumentor/phpdocumentor": "2.*"
     },
 	"suggest": {
 		"zendframework/zend-ldap": "Required for the additional LDAP features."
